# src/routes/Orders.ts
@@ -7,7 +7,7 @@ import { Payment, MercadoPagoConfig } from "mercadopago";
 import { v4 } from "uuid";
 
 const client = new MercadoPagoConfig({
-  accessToken: process.env.ACCESS_TOKEN || ""
+  accessToken: process.env.ACCESS_TOKEN || "",
 });
 const payments = new Payment(client);
 
@@ -22,10 +22,10 @@ const orderSchema = z.object({
       email: z.string(),
       identification: z.object({
         type: z.string(),
-        number: z.string()
-      })
-    })
-  })
+        number: z.string(),
+      }),
+    }),
+  }),
 });
 
 const bodyShema = z.object({
@@ -41,14 +41,14 @@ const bodyShema = z.object({
       email: z.string(),
       identification: z.object({
         type: z.string(),
-        number: z.string()
-      })
-    })
-  })
+        number: z.string(),
+      }),
+    }),
+  }),
 });
 
 const requestParamsSchema = z.object({
-  id: z.string().uuid()
+  id: z.string().uuid(),
 });
 
 export async function orderRoutes(app: FastifyInstance) {
@@ -61,17 +61,17 @@ export async function orderRoutes(app: FastifyInstance) {
         tags: ["Orders"],
         body: bodyShema,
         headers: z.object({
-          authorization: z.string().optional()
+          authorization: z.string().optional(),
         }),
         response: {
           201: z.object({
             paymentLink: z.string().nullish(),
             qrCodeImg: z.string().nullish(),
-            qrCodeBase64: z.string().nullish()
+            qrCodeBase64: z.string().nullish(),
           }),
-          400: z.object({ message: z.string() })
-        }
-      }
+          400: z.object({ message: z.string() }),
+        },
+      },
     },
     async (request, reply) => {
       const orderData = orderSchema.parse(request.body);
@@ -79,16 +79,16 @@ export async function orderRoutes(app: FastifyInstance) {
       const user = await prisma.user.findUnique({
         where: { email: request.body.paymentData.payer.email },
         select: {
-          id: true
-        }
+          id: true,
+        },
       });
       const userId = user!.id;
       const external = v4();
 
       const config = await prisma.configValues.findFirst({
         select: {
-          yuanPercentageIncrease: true
-        }
+          yuanPercentageIncrease: true,
+        },
       });
 
       if (!config) {
@@ -113,14 +113,14 @@ export async function orderRoutes(app: FastifyInstance) {
             email: body.paymentData.payer.email,
             identification: {
               type: body.paymentData.payer.identification.type,
-              number: body.paymentData.payer.identification.number
-            }
+              number: body.paymentData.payer.identification.number,
+            },
           },
           installments: body?.paymentData?.installments || 1,
           external_reference: external,
-          notification_url: "https://backend-p624.onrender.com/webhook"
+          notification_url: "https://backend-p624.onrender.com/webhook",
         },
-        requestOptions: { idempotencyKey: external }
+        requestOptions: { idempotencyKey: external },
       };
       if (body.paymentData.token != null) {
         (paymentInfo.body as any).token = body.paymentData.token;
@@ -141,12 +141,22 @@ export async function orderRoutes(app: FastifyInstance) {
       const order = await prisma.order.create({
         data: {
           ...orderData,
+          closed: false,
+          pixInfo: {
+            paymentLink:
+              paymentResult.point_of_interaction?.transaction_data
+                ?.ticket_url ?? "",
+            qrCodeImg:
+              paymentResult.point_of_interaction?.transaction_data?.qr_code ??
+              "",
+          },
           expireAt: paymentResult?.date_of_expiration || "",
           userPaymentStatus: paymentResult?.status || "pending",
           adminPaymentStatus: "pending",
           userId: userId,
-          external_reference: external
-        }
+
+          external_reference: external,
+        },
       });
 
       if (!order) {
@@ -161,11 +171,12 @@ export async function orderRoutes(app: FastifyInstance) {
           paymentResult.point_of_interaction?.transaction_data?.qr_code ?? "",
         qrCodeBase64:
           paymentResult.point_of_interaction?.transaction_data
-            ?.qr_code_base64 ?? ""
+            ?.qr_code_base64 ?? "",
       });
     }
   );
 
+  //ORDER BY ID
   app.withTypeProvider<ZodTypeProvider>().get(
     "/orders/:id",
     {
@@ -174,18 +185,13 @@ export async function orderRoutes(app: FastifyInstance) {
         summary: "Get Order by ID",
         tags: ["Orders"],
         headers: z.object({
-          authorization: z.string().optional()
+          authorization: z.string().optional(),
         }),
-        params: z.object({ id: z.string().uuid() }),
-        response: {
-          200: any,
-          404: z.object({ message: z.string() })
-        },
-        preHandler: [autenticarToken]
-      }
+        params: requestParamsSchema,
+      },
     },
     async (request, reply) => {
-      const { id } = request.params;
+      const { id } = requestParamsSchema.parse(request.params);
 
       const order = await prisma.order.findUnique({
         where: { id },
@@ -196,8 +202,25 @@ export async function orderRoutes(app: FastifyInstance) {
           yuanValue: true,
           userPaymentStatus: true,
           adminPaymentStatus: true,
-          expireAt: true
-        }
+          proofOfPayment: {
+            select: {
+              link: true,
+            },
+          },
+          qrCode: {
+            select: {
+              link: true,
+            },
+          },
+          user: {
+            select: {
+              name: true,
+              phone: true,
+              email: true,
+            },
+          },
+          pixInfo: true,
+        },
       });
 
       if (!order) {
@@ -208,6 +231,37 @@ export async function orderRoutes(app: FastifyInstance) {
     }
   );
 
+  //CLOSE ORDER
+  app.withTypeProvider<ZodTypeProvider>().put(
+    "/orders/close/:id",
+    {
+      preHandler: autenticarToken,
+      schema: {
+        summary: "Get Order by ID",
+        tags: ["Orders"],
+        headers: z.object({
+          authorization: z.string().optional(),
+        }),
+        params: requestParamsSchema,
+      },
+    },
+    async (request, reply) => {
+      const { id } = requestParamsSchema.parse(request.params);
+
+      const order = await prisma.order.update({
+        where: { id },
+        data: { closed: true },
+      });
+
+      if (!order) {
+        return reply.status(404).send({ message: "Order not found" });
+      }
+
+      return reply.status(200).send({ message: "Order closed" });
+    }
+  );
+
+  //ALL ORDERS
   app.withTypeProvider<ZodTypeProvider>().get(
     "/orders",
     {
@@ -216,9 +270,9 @@ export async function orderRoutes(app: FastifyInstance) {
         summary: "Get Orders",
         tags: ["Orders"],
         headers: z.object({
-          authorization: z.string().optional()
-        })
-      }
+          authorization: z.string().optional(),
+        }),
+      },
     },
     async (request, reply) => {
       const orders = await prisma.order.findMany({
@@ -229,11 +283,25 @@ export async function orderRoutes(app: FastifyInstance) {
           yuanValue: true,
           userPaymentStatus: true,
           adminPaymentStatus: true,
-          paymentData: true,
-          proofOfPayment: true,
-          qrCode: true,
-          user: true
-        }
+          proofOfPayment: {
+            select: {
+              link: true,
+            },
+          },
+          qrCode: {
+            select: {
+              link: true,
+            },
+          },
+          user: {
+            select: {
+              name: true,
+              phone: true,
+              email: true,
+            },
+          },
+          pixInfo: true,
+        },
       });
 
       if (!orders) {
@@ -244,6 +312,7 @@ export async function orderRoutes(app: FastifyInstance) {
     }
   );
 
+  //USER ORDERS
   app.withTypeProvider<ZodTypeProvider>().get(
     "/orders/user/:id",
     {
@@ -251,16 +320,16 @@ export async function orderRoutes(app: FastifyInstance) {
       schema: {
         params: requestParamsSchema,
         headers: z.object({
-          authorization: z.string().optional()
-        })
-      }
+          authorization: z.string().optional(),
+        }),
+      },
     },
     async (request, reply) => {
       const { id } = requestParamsSchema.parse(request.params);
 
       const orders = await prisma.order.findMany({
         where: {
-          userId: id
+          userId: id,
         },
         select: {
           id: true,
@@ -269,11 +338,25 @@ export async function orderRoutes(app: FastifyInstance) {
           yuanValue: true,
           userPaymentStatus: true,
           adminPaymentStatus: true,
-          paymentData: true,
-          proofOfPayment: true,
-          qrCode: true,
-          user: true
-        }
+          proofOfPayment: {
+            select: {
+              link: true,
+            },
+          },
+          qrCode: {
+            select: {
+              link: true,
+            },
+          },
+          user: {
+            select: {
+              name: true,
+              phone: true,
+              email: true,
+            },
+          },
+          pixInfo: true,
+        },
       });
 
       if (!orders) {
@@ -284,6 +367,7 @@ export async function orderRoutes(app: FastifyInstance) {
     }
   );
 
+  //UPDATE ORDER
   app.withTypeProvider<ZodTypeProvider>().put(
     "/orders/:id",
     {
@@ -292,16 +376,16 @@ export async function orderRoutes(app: FastifyInstance) {
         summary: "Update Order by ID",
         tags: ["Orders"],
         headers: z.object({
-          authorization: z.string().optional()
+          authorization: z.string().optional(),
         }),
         params: z.object({ id: z.string().uuid() }),
         body: orderSchema,
         response: {
           200: any,
-          404: z.object({ message: z.string() })
+          404: z.object({ message: z.string() }),
         },
-        preHandler: [autenticarToken]
-      }
+        preHandler: [autenticarToken],
+      },
     },
     async (request, reply) => {
       const { id } = request.params;
@@ -317,8 +401,25 @@ export async function orderRoutes(app: FastifyInstance) {
           yuanValue: true,
           userPaymentStatus: true,
           adminPaymentStatus: true,
-          expireAt: true
-        }
+          proofOfPayment: {
+            select: {
+              link: true,
+            },
+          },
+          qrCode: {
+            select: {
+              link: true,
+            },
+          },
+          user: {
+            select: {
+              name: true,
+              phone: true,
+              email: true,
+            },
+          },
+          pixInfo: true,
+        },
       });
 
       if (!order) {
@@ -329,6 +430,7 @@ export async function orderRoutes(app: FastifyInstance) {
     }
   );
 
+  //DELETE ORDER
   app.withTypeProvider<ZodTypeProvider>().delete(
     "/orders/:id",
     {
@@ -337,21 +439,21 @@ export async function orderRoutes(app: FastifyInstance) {
         summary: "Delete Order by ID",
         tags: ["Orders"],
         headers: z.object({
-          authorization: z.string().optional()
+          authorization: z.string().optional(),
         }),
         params: z.object({ id: z.string().uuid() }),
         response: {
           204: z.null(),
-          404: z.object({ message: z.string() })
+          404: z.object({ message: z.string() }),
         },
-        preHandler: [autenticarToken]
-      }
+        preHandler: [autenticarToken],
+      },
     },
     async (request, reply) => {
       const { id } = request.params;
 
       const order = await prisma.order.delete({
-        where: { id }
+        where: { id },
       });
 
       if (!order) {
